--- a/www/html/index.html
+++ b/www/html/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
-<head>
-    <title>FRUMOS</title>
-</head>
-<h1> Hell Na </h1>
-<h1> Am schimbat ceva </h1>
+<html>
+    <head>
+        <title>FRUMOSUL NOSTRU SITE</title>
+    </head>
+    <body>
+        <a href="./acasa.html">Acasa</a>
+    </body>
+    <footer>
+        <h6>COSMIN, ALEX & Co</Code></h6>
+    </footer>
+</html>
