--- a/www/html/index.html
+++ b/www/html/index.html
@@ -7,6 +7,6 @@
         <a href="./acasa.html">Acasa</a>
     </body>
     <footer>
-        <h6>COSMIN, ALEX & Co</Code></h6>
+        <h6>COSMIN, ALEX & Co</h6>
     </footer>
 </html>
