--- a/www/html/index.html
+++ b/www/html/index.html
@@ -2,9 +2,13 @@
 <html>
     <head>
         <title>FRUMOSUL NOSTRU SITE</title>
+        <h1>FRUMOSUL NOSTRU SITE</h1>
     </head>
     <body>
-        <a href="./acasa.html">Acasa</a>
+        <a href="./index.html">Acasa</a>
+        <a href="./all_memes.html">Toate Meme-urile</a>
+        <a href="./sugereaza.html">Sugereaza</a>
+        <a href="./random_meme.html">Random Meme</a>
     </body>
     <footer>
         <h6>COSMIN, ALEX & Co</h6>
