--- a/www/html/index.html
+++ b/www/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="../css/index.html">
+        <link rel="stylesheet" href="../css/index.css">
         <title>FRUMOSUL NOSTRU SITE</title>
         <h1>FRUMOSUL NOSTRU SITE</h1>
     </head>
