--- a/www/html/index.html
+++ b/www/html/index.html
@@ -6,10 +6,12 @@
         <h1>FRUMOSUL NOSTRU SITE</h1>
     </head>
     <body>
-        <a href="./index.html">Acasa</a>
-        <a href="./all_memes.html">Toate Meme-urile</a>
-        <a href="./sugereaza.html">Sugereaza</a>
-        <a href="./random_meme.html">Random Meme</a>
+        <div id="sname">
+            <a href="./index.html">Acasa</a>
+            <a href="./all_memes.html">Toate Meme-urile</a>
+            <a href="./sugereaza.html">Sugereaza</a>
+            <a href="./random_meme.html">Random Meme</a>
+        </div>
     </body>
     <footer>
         <h6>COSMIN, ALEX & Co</h6>
