distanta dintre butoane e dinamica glow la titlu

--- a/html/index.html
+++ b/html/index.html
@@ -3,13 +3,15 @@
     <head>
         <link rel="stylesheet" href="../css/index.css">
         <title>FRUMOSUL NOSTRU SITE</title>
-        <h1>FRUMOSUL NOSTRU SITE</h1>
+        <h1 id="title">FRUMOSUL NOSTRU SITE</h1>
     </head>
     <body>
-        <a href="./index.html">Acasa</a>
-        <a href="./all_memes.html">Toate Meme-urile</a>
-        <a href="./sugereaza.html">Sugereaza</a>
-        <a href="./random_meme.html">Random Meme</a>
+        <div class="button-container">
+            <a href="./index.html" class="button">Acasa</a>
+            <a href="./all_memes.html" class="button">Toate Meme-urile</a>
+            <a href="./sugereaza.html" class="button">Sugereaza</a>
+            <a href="./random_meme.html" class="button">Random Meme</a>
+        </div>
     </body>
     <footer>
         <h6>COSMIN, ALEX & Co</h6>
