--- a/html/all_memes.html
+++ b/html/all_memes.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<body>
+    <div class="button-container">
+        <a href="./index.html" class="button">Acasa</a>
+        <a href="./all_memes.html" class="button">Toate Meme-urile</a>
+        <a href="./sugereaza.html" class="button">Sugereaza</a>
+        <a href="./random_meme.html" class="button">Random Meme</a>
+    </div>
+</body>
 <h1>HI DAD, IM HUNGRY</h1>
 <h1>HY HUNGRY, IM DAD</h1>
 <p>de ce este impostorul suspicios? Top 5 impostori capybara</p>
