Bg color all_memes

--- a/html/all_memes.html
+++ b/html/all_memes.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Toate Meme-urile</title>
-        <link rel="stylesheet" href="css/all_memes.css">
+        <link rel="stylesheet" href="../css/all_memes.css">
     </head>
     <body>
         <div class="button-container">
