--- a/html/sugereaza.html
+++ b/html/sugereaza.html
@@ -1,8 +1,16 @@
-<body>
-    <div class="button-container">
-        <a href="./index.html" class="button">Acasa</a>
-        <a href="./all_memes.html" class="button">Toate Meme-urile</a>
-        <a href="./sugereaza.html" class="button">Sugereaza</a>
-        <a href="./random_meme.html" class="button">Random Meme</a>
-    </div>
-</body>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Sugereaza</title>
+        <link rel="stylesheet" href="../css/sugereaza.css">
+    </head>
+    <body>
+        <h1 class="title">Sugereaza</h1>
+        <div class="button-container">
+            <a href="./home.html" class="button"><span>Acasa </span></a>
+            <a href="./all_memes.html" class="button"><span>Toate Meme-urile </span></a>
+            <a href="./sugereaza.html" class="active_button"><span>Sugereaza </span></a>
+            <a href="./random_meme.html" class="button"><span>Random Meme </span></a>
+        </div>
+    </body>
+</html>
