--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!DOCTYPE html>
-<meta http-equiv="Refresh" content="2; url=./html/index.html">
+<meta http-equiv="Refresh" content="2; url=./html/home.html">
