--- a/html/all_memes.html
+++ b/html/all_memes.html
@@ -5,11 +5,12 @@
         <link rel="stylesheet" href="../css/all_memes.css">
     </head>
     <body>
+        <h1 class="title">Toate Meme-urile</h1>
         <div class="button-container">
-            <a href="./index.html" class="button">Acasa</a>
-            <a href="./all_memes.html" class="button">Toate Meme-urile</a>
-            <a href="./sugereaza.html" class="button">Sugereaza</a>
-            <a href="./random_meme.html" class="button">Random Meme</a>
+            <a href="./home.html" class="button"><span>Acasa </span></a>
+            <a href="./all_memes.html" class="active_button"><span>Toate Meme-urile </span></a>
+            <a href="./sugereaza.html" class="button"><span>Sugereaza </span></a>
+            <a href="./random_meme.html" class="button"><span>Random Meme </span></a>
         </div>
         <h1>HI DAD, IM HUNGRY</h1>
         <h1>HY HUNGRY, IM DAD</h1>
