am adaugat favicon, il schimbam noi pe parcurs

--- a/html/all_memes.html
+++ b/html/all_memes.html
@@ -3,6 +3,7 @@
     <head>
         <title>Toate Meme-urile</title>
         <link rel="stylesheet" href="../css/all_memes.css">
+        <link rel="icon" href="../images/favicon.png">
     </head>
     <body>
         <h1 class="title">Toate Meme-urile</h1>
