--- a/html/random_meme.html
+++ b/html/random_meme.html
@@ -3,6 +3,7 @@
     <head>
         <title>Random Meme</title>
         <link rel="stylesheet" href="../css/random_meme.css">
+        <link rel="icon" href="../images/favicon.png">
     </head>
     <body>
         <h1 class="title">Random Meme</h1>
