--- a/html/sugereaza.html
+++ b/html/sugereaza.html
@@ -3,6 +3,7 @@
     <head>
         <title>Sugereaza</title>
         <link rel="stylesheet" href="../css/sugereaza.css">
+        <link rel="icon" href="../images/favicon.png">
     </head>
     <body>
         <h1 class="title">Sugereaza</h1>
