--- a/html/home.html
+++ b/html/home.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="../css/index.css">
         <title>FRUMOSUL NOSTRU SITE</title>
+        <link rel="icon" href="../images/favicon.png">
     </head>
     <body>
         <h1 id="title">FRUMOSUL NOSTRU SITE</h1>
